--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        - os:
-           - linux-latest
-           - macos-latest
-           - windows-latest
-        - nim:
-           - version-1-6
-           - devel
+        os:
+         - linux-latest
+         - macos-latest
+         - windows-latest
+        nim:
+         - version-1-6
+         - devel
 
     name: '${{ matrix.os }} (Nim ${{ matrix.nim }})'
     runs-on: ${{ matrix.os }}
